# Innbyggerkontakt-public

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  backend.code-workspace.template  baseline.txt  lint-requirements.txt  pyproject.toml
.cloudbuild/: .dockerignore  Dockerfile  README.md  build_image.yml  deploy_cloudrun.yml  gatsby_sanity_build.yml  otel_setup_publisher.yml  poetry_publish.yml  poetry_test.yml  pre-commit.yml  publish_image.yml  python_test.yml  terraform_apply.yml  terraform_plan.yml  terraform_release_state_lock.yml  website_deploy.yml  yarn_build-dev.yml  yarn_deploy-dev.yml
.github/: dependabot.yml
config/: README.md  environments.yml
data/: README.md  pyproject.toml  requirements.txt
data/common-templates/: ta_enkelsak.json  ta_flersak.json
data/migrations/: mvp-data-release.sh
data/neworg/: firestore.py  new_org.py
data/neworg/mjml_template/: default.mjml
data/neworg/templates/: org.json.jinja
data/org-bootstrap/: bootstrap_organisasjon.json
data/org-demo/: lillevik_organisasjon.json
data/org-dev/: developer_organisasjon.json
data/samples/: bulletin_sample.json  bulletin_template_sample.json  organization_sample.json  template_application_sample.json  users_sample.json
delete_mailjet_contacts/: README.md  main.py  pyproject.toml  requirements.txt
delete_mailjet_contacts/delete_mailjet_contacts/: __init__.py  mailjet.py
delete_mailjet_contacts/tests/: test_mailjet.py
freg_batch_getter/: README.md  main.py  pyproject.toml  requirements.txt  services.py
freg_batch_getter/tests/: conftest.py  test_main.py
freg_fetch_jobbid/: README.md  main.py  pyproject.toml  requirements.txt
freg_fetch_jobbid/freg_fetch_jobbid/: __init__.py  main.py  service.py
freg_fetch_jobbid/tests/: conftest.py  test_request_params.py
get_phone_numbers_from_krr/: README.md  main.py  pyproject.toml  requirements.txt  services.py
get_phone_numbers_from_krr/tests/: conftest.py  mock_data.py  test_main.py  test_services.py
helpers/: README.md
helpers/cloud_event_model/: README.md  pyproject.toml
helpers/cloud_event_model/cloud_event_model/: __init__.py  cloud_event_model.py
helpers/cloud_event_model/examples/: main.py
helpers/cloud_event_model/tests/: test_main.py
helpers/otel_setup/: .gcloudignore  README.md  pylintrc  pyproject.toml  tox.ini
helpers/otel_setup/otel_setup/: __init__.py  main.py
helpers/otel_setup/tests/: test_ff_app.py  test_otel_setup.py
helpers/phone_validator_models/: pyproject.toml
helpers/phone_validator_models/phone_validator_models/: phone_validator_models.py
helpers/phone_validator_models/tests/: test_phone_number.py
helpers/ps_message_freg_fetch_jobbid/: pyproject.toml
helpers/ps_message_freg_fetch_jobbid/ps_message/freg_fetch_jobbid/: __init__.py  freg_fetch_jobbid.py
helpers/ps_message_freg_fetch_jobbid/tests/: test_model.py
helpers/ps_message_krr_message/: pyproject.toml
helpers/ps_message_krr_message/ps_message/krr_message/: __init__.py  krr_message.py
helpers/ps_message_matrikkel_owner_search/: pyproject.toml
helpers/ps_message_matrikkel_owner_search/ps_message/matrikkel_owner_search/: __init__.py  matrikkel_owner_search.py
helpers/ps_message_matrikkel_owner_search/tests/: test_model.py
hooks/: README.md  pre-commit.script  pre_commit.py  setup_hooks.py
matrikkel/download_matrikkel_data_batch/: main.py  matrikkel_models.py  pyproject.toml  readme.md  requirements.txt  services.py
matrikkel/download_matrikkel_data_batch/tests/: conftest.py  test_services.py
matrikkel/matrikkel_owner_search/: main.py  pyproject.toml  requirements.txt
matrikkel/matrikkel_owner_search/libs/: bucket_services.py  get_secret.py  person_services.py  publish_services.py
matrikkel/matrikkel_owner_search/libs/store_service/: __init__.py  context.py  store_service_client.py
matrikkel/matrikkel_owner_search/models/: person_model.py
matrikkel/matrikkel_owner_search/tests/: MatrikkelOwnerSearchEventFirstBatch.json  MatrikkelOwnerSearchEventLastBatch.json  test_main.py
message/: README.md
packages_source/: .dockerignore  README.md
packages_source/python/: pyproject.toml  requirements_test.txt  setup.py
packages_source/python/innbyggerkontakt/common/: __init__.py  utils.py
packages_source/python/innbyggerkontakt/digdir/: __init__.py  auth.py  request.py
packages_source/python/innbyggerkontakt/firebase/: __init__.py  firebase_client.py  user.py
packages_source/python/innbyggerkontakt/gcp/: __init__.py  utils.py
packages_source/python/innbyggerkontakt/models/: basic_persons.py  person_list.py
packages_source/python/innbyggerkontakt/monitoring/: logger.py
packages_source/python/test/gcp/: test_utils.py
packages_source/python/test/models/: test_persons.py
recipients/: .dockerignore  Dockerfile  README.md  docker-compose.yml  release.sh  requirements.txt  requirements_test.txt
sanity/: README.md  deskStructure.js  package.json  resolveProductionUrl.js  sanity.json
send_test_sms/: README.md  main.py  pyproject.toml  requirements.txt
send_test_sms/libs/: cors.py  get_from_name.py  get_secrets.py  sinch_api.py  sms_handler.py
send_test_sms/libs/firebase/: __init__.py  firebase_client.py  user.py
send_test_sms/models/: sms_test_request.py
slack_notifier/: README.md  main.py  models.py  requirements.txt
sms_sender/: README.md  main.py  pyproject.toml  requirements.txt
terraform/: .terraform.lock.hcl  README.md  artifact-registry.tf  cloud-function.tf  cloud-function2.tf  cloud-kms.tf  cloud-run.tf  cloud-scheduler.tf  cloud-sql.tf  cloud-storage.tf  cloud-tasks.tf  deploy_all.sh  iam-audits.tf  iam-policies.tf  innbyggerkontakt-dev.tfbackend  innbyggerkontakt-dev.tfvars  innbyggerkontakt.tfbackend  innbyggerkontakt.tfvars  logging_sink.tf  project.tf  pubsub.tf  requirements.txt  secrets-manager.tf  service_account.tf  version.tf  vpc.tf  zip_files.py
webapp/: .env.development.enc  .env.production.enc  .eslintrc.js  .firebaserc  .gitignore  .prettierignore  README.md  firebase.json  firestore.indexes.json  firestore.rules  package.json  tsconfig.json
(+781 files in other folders)
