[tool.poetry]
name = "neworg"
version = "0.1.0"
description = "CLI tool to setup new orgs."
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
cleo = "^0.8.1"
Pygments = "^2.13.0"
requests = "^2.28.1"
google-cloud-secret-manager = "^2.12.6"
firebase-admin = "^6.0.1"

[[tool.poetry.source]]
name = "py-innbyggerkontakt-dev-artifact"
url = "https://europe-west3-python.pkg.dev/innbyggerkontakt-dev/ik-python-repo/"
default = false
secondary = true

[[tool.poetry.source]]
name = "py-innbyggerkontakt-dev-artifact-simple"
url = "https://europe-west3-python.pkg.dev/innbyggerkontakt-dev/ik-python-repo/simple/"
default = false
secondary = false

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
neworg = 'neworg.new_org:application.run'
