[tool.poetry]
name = "delete-mailjet-contacts"
version = "0.1.0"
description = ""
authors = ["Anders Steen <anders.steen@gsuite.knowit.no>"]
readme = "README.md"
packages = [{include = "delete_mailjet_contacts"}]

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.28.1"
google-cloud-secret-manager = "^2.12.6"
google-auth = "^2.14.1"
cloudevents = "^1.7.0"
functions-framework = "^3.2.1"


[tool.poetry.group.test.dependencies]
pytest = "^7.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
