[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "freg-fetch-jobbid"
version = "0.1.0"
authors = []
description = ""
readme = "README.md"
packages = [{include = "freg_fetch_jobbid"}]

[tool.poetry.dependencies]
python = "^3.10"
validators = "^0.20.0"
innbyggerkontakt = "^1.0.2"
requests-oauthlib = "^1.3.1"
pydantic = "^1.8.2"
httpx = "^0.23.0"
requests = "^2.27"
google-cloud-tasks = ">=2.7,<3.0"
cloudevents = "^1.6.1"
functions-framework = "^3.2.0"
otel-setup = "^0.2.2"
ps-message-freg-batch-getter = "^0.1.1"
freg-models = "^0.1.1"
ps-message-freg-fetch-jobbid = "^0.1.4"
google-cloud-logging = "^3.2.5"

[tool.poetry.group.test.dependencies]
pytest = "^7.1.2"
pytest-cov = "^3.0.0"
PyYAML = "^6.0"

[tool.poetry.group.dev.dependencies]
black = ">=22.6.0,<22.7.0"
isort = ">=5.10.1,<5.11.0"
flakeheaven = ">=2.1.3,<2.2.0"
cognitive-complexity = ">=1.3.0,<1.4.0"
flake8-bandit = ">=3.0.0,<3.1.0"
flake8-bugbear = ">=22.7.1,<22.8.0"
flake8-cognitive-complexity = ">=0.1.0,<0.2.0"
flake8-comprehensions = ">=3.10.0,<3.11.0"
flake8-docstrings = ">=1.6.0,<1.7.0"
flake8-simplify = ">=0.19.3,<0.20.0"
flake8-quotes = ">=3.3.1,<3.4.0"
mccabe = ">=0.6.1,<0.7.0"
pylint = ">=2.14.5,<2.15.0"
pre-commit = "^2.20.0"
datamodel-code-generator = {extras = ["http"], version = "^0.13.1"}
trio = "^0.21.0"
pytest-mock = "^3.9.0"

[[tool.poetry.source]]
name = "py-innbyggerkontakt-dev-artifact-simple"
url = "https://europe-west3-python.pkg.dev/innbyggerkontakt-dev/ik-python-repo/simple/"
default = false
secondary = false

[[tool.poetry.source]]
name = "py-innbyggerkontakt-artifact-simple"
url = "https://europe-west3-python.pkg.dev/innbyggerkontakt/ik-python-repo/simple/"
default = false
secondary = false

[[tool.poetry.source]]
name = "py-innbyggerkontakt-dev-artifact"
url = "https://europe-west3-python.pkg.dev/innbyggerkontakt-dev/ik-python-repo/"
default = false
secondary = true

[[tool.poetry.source]]
name = "py-innbyggerkontakt-artifact"
url = "https://europe-west3-python.pkg.dev/innbyggerkontakt/ik-python-repo/"
default = false
secondary = true

[tool.datamodel-codegen]
field-constraints = true
snake-case-field = true
strip-default-none = false
target-python-version = "3.10"

# <===FOrmatting===>

[tool.black]
line-length = 88
target-version = ['py310']
skip-string-normalization = 1

[tool.flakeheaven]
base = ["../pyproject.toml"]

# match by glob
[tool.flakeheaven.exceptions."**/__init__.py"]
pylint = ["-*"]
flake8-docstrings = ["-D104"]
pyflakes = ["-F401"]

[tool.flakeheaven.exceptions."*test_*.py"]
pylint = ["-*"]
flake8-docstrings = ["-*"]

[tool.flakeheaven.exceptions."webapp/functions/python/main.py"]
flake8-docstrings = ["-D103"]

[tool.flakeheaven.exceptions."webapp/functions/python/gcp/*.py"] #theese will have to be fixed lated
flake8-docstrings = ["-*"]

[tool.flakeheaven.exceptions."webapp/functions/python/firebase/*"] #theese will have to be fixed lated
flake8-docstrings = ["-*"]

#  hacking = ["+*"] not compatible with flake 8 v 4.0.1
[tool.isort]
known_first_party = ["freg_config", "models", "services"]
known_local_folder = ["freg_config", "services", "models"]
lines_after_imports = 2
profile = "black"

[tool.pytest.ini_options]
# required_plugins = ["pytest-cov"]
# addopts = "--cov=."
