[tool.poetry]
name = "get-phone-numbers-from-krr"
version = "0.1.0"
description = "Cloud function that will get nids from gcp bucket and upload phone numbers and then call sms sender"
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
functions-framework = "^3.2.0"
cloudevents = "^1.6.1"
innbyggerkontakt = "^1.0.2"
cloud-event-model = "^0.1.3"
freg-models = {version = "^0.1.1", source = "py-innbyggerkontakt-dev-artifact"}
krr-models = {version = "^0.1.0", source = "py-innbyggerkontakt-dev-artifact"}
otel-setup = "^0.2.2"
ps-message-krr-message = "^0.1.0"
ps-message-sms-event = "^0.1.0"
phone-validator-models = "^0.1.2"

[[tool.poetry.source]]
name = "py-innbyggerkontakt-dev-artifact-simple"
url = "https://europe-west3-python.pkg.dev/innbyggerkontakt-dev/ik-python-repo/simple/"
default = false
secondary = false

[[tool.poetry.source]]
name = "py-innbyggerkontakt-dev-artifact"
url = "https://europe-west3-python.pkg.dev/innbyggerkontakt-dev/ik-python-repo/"
default = false
secondary = false

[[tool.poetry.source]]
name = "google-ik-artifactpy-innbyggerkontakt-artifact"
url = "https://europe-west3-python.pkg.dev/innbyggerkontakt/ik-python-repo/"
default = false
secondary = true

[[tool.poetry.source]]
name = "google-ik-artifactpy-innbyggerkontakt-artifact-simple"
url = "https://europe-west3-python.pkg.dev/innbyggerkontakt/ik-python-repo/simple/"
default = false
secondary = false

[tool.poetry.group.dev.dependencies]
pytest = "^7.1.3"
pytest-cov = "^3.0.0"
pytest-mock = "^3.7.0"
black = "^22.8.0"
pydantic-factories = "^1.6.2"

[tool.black]
line-length = 88
target-version = ['py310']
skip-string-normalization = 1

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
