[tool.poetry]
name = "cloud-event-model"
version = "0.1.5"
description = ""
authors = ["Anders Steen <anders.steen@knowit.no>"]
readme = "README.md"
packages = [{include = "cloud_event_model"}]

[tool.poetry.dependencies]
python = "^3.7"
pydantic = "^1.10.2"
cloudevents = "^1.6.1"
google-events = "^0.2.0"


[tool.poetry.group.dev.dependencies]
pytest = "^7.1.3"
pre-commit = "^2.20.0"
black = "^22.8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[[tool.poetry.source]]
name = "py-innbyggerkontakt-dev-artifact"
url = "https://europe-west3-python.pkg.dev/innbyggerkontakt-dev/ik-python-repo/"
default = false
secondary = true


[[tool.poetry.source]]
name = "py-innbyggerkontakt-artifact"
url = "https://europe-west3-python.pkg.dev/innbyggerkontakt/ik-python-repo/"
default = false
secondary = true


[tool.black]
line-length = 88
target-version = ['py310']
skip-string-normalization = 1

[tool.flakeheaven]
base = ["../pyproject.toml"]
baseline = ""

#  hacking = ["+*"] not compatible with flake 8 v 4.0.1
[tool.isort]
known_first_party = ["freg_config", "models", "services"]
known_local_folder = ["freg_config", "services", "models"]
lines_after_imports = 2
profile = "black"

#[pytest]
#mock_use_standalone_module = true

[tool.pytest.ini_options]
# required_plugins = ["pytest-cov"]
# addopts = "--cov=."
