[tool.poetry]
name = "ps-message-matrikkel-owner-search"
version = "0.1.3"
description = ""
authors = ["Adrian Pleym <adrian.pleym@knowit.no>"]
readme = "README.md"
packages = [{include = "ps_message"}]

[tool.poetry.dependencies]
python = "^3.10"
cloud-event-model = "^0.1.4"


[[tool.poetry.source]]
name = "py-innbyggerkontakt-dev-artifact"
url = "https://europe-west3-python.pkg.dev/innbyggerkontakt-dev/ik-python-repo/"
default = false
secondary = true

[[tool.poetry.source]]
name = "google-ik-artifactpy-innbyggerkontakt-artifact"
url = "https://europe-west3-python.pkg.dev/innbyggerkontakt/ik-python-repo/"
default = false
secondary = true

[[tool.poetry.source]]
name = "py-innbyggerkontakt-dev-artifact-simple"
url = "https://europe-west3-python.pkg.dev/innbyggerkontakt-dev/ik-python-repo/simple/"
default = false
secondary = false

[[tool.poetry.source]]
name = "google-ik-artifactpy-innbyggerkontakt-artifact-simple"
url = "https://europe-west3-python.pkg.dev/innbyggerkontakt/ik-python-repo/simple/"
default = false
secondary = false

[[tool.poetry.source]]
name = "py-innbyggerkontakt-dev-artifact"
url = "https://europe-west3-python.pkg.dev/innbyggerkontakt-dev/ik-python-repo/"
default = false
secondary = true


[tool.poetry.group.dev.dependencies]
pytest = "^7.1.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
